force-app/main/default/objects/SummonerAccount__c/SummonerAccount__c.object-meta.xml
<CustomObject>
    <label>Summoner Account</label>
    <nameField>
        <label>Summoner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SummonerAccounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>