force-app/main/default/objects/SummonerAccount__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <externalId>true</externalId>
    <label>id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>