force-app/main/default/objects/SummonerAccount__c/fields/Profile_Icon__c.field-meta.xml
<CustomField>
    <fullName>Profile_Icon__c</fullName>
    <formula>IMAGE( &quot;https://ddragon.leagueoflegends.com/cdn/11.6.1/img/profileicon/&quot; + profileIconId__c + &quot;.png&quot;,&quot;Profile Icon&quot;)</formula>
    <label>Profile Icon</label>
    <type>Text</type>
</CustomField>