force-app/main/default/objects/SummonerAccount__c/fields/profileIconId__c.field-meta.xml
<CustomField>
    <fullName>profileIconId__c</fullName>
    <label>profileIconId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>