force-app/main/default/objects/SummonerAccount__c/fields/puuid__c.field-meta.xml
<CustomField>
    <fullName>puuid__c</fullName>
    <label>puuid</label>
    <length>110</length>
    <type>Text</type>
</CustomField>