force-app/main/default/objects/SummonerAccount__c/fields/summoner_Level__c.field-meta.xml
<CustomField>
    <fullName>Summoner_Level__c</fullName>
    <label>Summoner Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>